// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`session actions should create session 1`] = `
[
  {
    "account": "0xb7237dd7dacd9da8e489b57d4631fc33342ff75f",
    "type": "session/CREATE"
  }
]
`;

exports[`session actions should destroy session 1`] = `
[
  {
    "type": "session/DESTROY"
  }
]
`;

exports[`session actions should login CBE and go to default page (/cbe) 1`] = `
[
  {
    "isCBE": true,
    "profile": {
      "company": null,
      "email": null,
      "icon": null,
      "id": null,
      "name": null,
      "timestamp": null,
      "tokens": [],
      "url": null
    },
    "type": "session/PROFILE"
  },
  {
    "isInited": true,
    "type": "mainWallet/INIT"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin Cash",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin Gold",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Litecoin",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "NEM",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Ethereum",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "type": "AssetsManager/GET_ASSETS_MANAGER_COUNTS_START"
  },
  {
    "type": "AssetsManager/GET_TRANSACTIONS_START"
  },
  {
    "isInited": true,
    "type": "market/INIT"
  },
  {
    "type": "watcher/USER"
  },
  {
    "type": "watcher/CBE"
  },
  {
    "payload": {
      "args": [
        "/dashboard"
      ],
      "method": "replace"
    },
    "type": "@@router/CALL_HISTORY_METHOD"
  }
]
`;

exports[`session actions should login CBE and start watcher with cbeWatcher and go to last url 1`] = `
[
  {
    "isCBE": true,
    "profile": {
      "company": null,
      "email": null,
      "icon": null,
      "id": null,
      "name": null,
      "timestamp": null,
      "tokens": [],
      "url": null
    },
    "type": "session/PROFILE"
  },
  {
    "isInited": true,
    "type": "mainWallet/INIT"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin Cash",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin Gold",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Litecoin",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "NEM",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Ethereum",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "type": "AssetsManager/GET_ASSETS_MANAGER_COUNTS_START"
  },
  {
    "type": "AssetsManager/GET_TRANSACTIONS_START"
  },
  {
    "isInited": true,
    "type": "market/INIT"
  },
  {
    "type": "watcher/USER"
  },
  {
    "type": "watcher/CBE"
  },
  {
    "payload": {
      "args": [
        "/test-last-url"
      ],
      "method": "replace"
    },
    "type": "@@router/CALL_HISTORY_METHOD"
  }
]
`;

exports[`session actions should login USER and go to default url (/wallet) 1`] = `
[
  {
    "isCBE": false,
    "profile": {
      "company": null,
      "email": null,
      "icon": null,
      "id": null,
      "name": null,
      "timestamp": null,
      "tokens": [],
      "url": null
    },
    "type": "session/PROFILE"
  },
  {
    "isInited": true,
    "type": "mainWallet/INIT"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin Cash",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin Gold",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Litecoin",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Bitcoin",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "NEM",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "address": {
      "address": null,
      "id": "Ethereum",
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "timestamp": null,
      "transactionHash": null
    },
    "type": "mainWallet/WALLET_ADDRESS"
  },
  {
    "type": "AssetsManager/GET_ASSETS_MANAGER_COUNTS_START"
  },
  {
    "type": "AssetsManager/GET_TRANSACTIONS_START"
  },
  {
    "isInited": true,
    "type": "market/INIT"
  },
  {
    "type": "watcher/USER"
  },
  {
    "payload": {
      "args": [
        "/dashboard"
      ],
      "method": "replace"
    },
    "type": "@@router/CALL_HISTORY_METHOD"
  }
]
`;

exports[`session actions should logout 1`] = `
[
  {
    "isInited": false,
    "type": "market/INIT"
  },
  {
    "payload": {
      "args": [
        "/"
      ],
      "method": "push"
    },
    "type": "@@router/CALL_HISTORY_METHOD"
  }
]
`;
